--- a/app/src/main/res/menu/menu_help.xml
+++ b/app/src/main/res/menu/menu_help.xml
@@ -22,6 +22,11 @@
         android:title="@string/help_deleteLog"
         app:showAsAction="never" />
     <item
+        android:id="@+id/menMainWhatsNew"
+        android:orderInCategory="100"
+        android:title="@string/whats_new"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/menHelpAbout"
         android:orderInCategory="100"
         android:title="@string/help_about"
