--- a/app/src/main/res/layout/main_content.xml
+++ b/app/src/main/res/layout/main_content.xml
@@ -81,10 +81,37 @@
             </RelativeLayout>
 
             <RelativeLayout
-                android:id="@+id/llSavedMarklist"
+                android:id="@+id/llImportantToDos"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/llCurrentNotes"
+                android:layout_margin="8dp"
+                android:background="@drawable/tbl_border">
+                <TextView
+                    android:id="@+id/lblImportantToDosHeader"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:text="@string/main_importantToDos"
+                    android:padding="8dp"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:gravity="center"
+                    android:layout_gravity="center"/>
+                <ListView
+                    android:id="@+id/lvImportantToDos"
+                    android:layout_below="@+id/lblImportantToDosHeader"
+                    android:layout_width="match_parent"
+                    android:layout_height="80dp"
+                    android:layout_margin="8dp"
+                    tools:ignore="NestedScrolling" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/llSavedMarklist"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/llImportantToDos"
                 android:layout_margin="8dp"
                 android:background="@drawable/tbl_border">
                 <TextView
