--- a/app/src/main/res/layout/main_today_event.xml
+++ b/app/src/main/res/layout/main_today_event.xml
@@ -8,10 +8,12 @@
   ~ of the License, or (at your option) any later version.
   -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/listview_background"
     android:layout_width="match_parent"
     android:layout_height="20dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:weightSum="10"
     android:orientation="horizontal">
 
@@ -27,14 +29,15 @@
         android:layout_weight="3"
         android:layout_width="0dp"
         android:layout_height="20dp"
-        android:gravity="center"
-        android:layout_gravity="center"/>
+        android:gravity="start"
+        android:layout_gravity="start|center"/>
 
     <TextView
         android:id="@+id/lblTodayEventContent"
         android:layout_weight="6"
         android:layout_width="0dp"
         android:layout_height="20dp"
-        android:gravity="center"
-        android:layout_gravity="center"/>
+        android:textStyle="bold"
+        android:gravity="start"
+        android:layout_gravity="start|center"/>
 </LinearLayout>
