--- a/app/src/main/res/layout/mark_item.xml
+++ b/app/src/main/res/layout/mark_item.xml
@@ -8,41 +8,43 @@
   ~ of the License, or (at your option) any later version.
   -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/item"
     android:orientation="horizontal"
-    android:background="@color/colorPrimary"
+    android:background="@drawable/listview_background"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
+    android:layout_height="30dp"
     android:weightSum="10">
 
     <android.support.v7.widget.AppCompatImageView
         app:srcCompat="@drawable/ic_check_circle_black_24dp"
-        android:layout_width="46dp"
-        android:layout_height="46dp"
-        android:layout_margin="2dp"/>
+        android:layout_width="26dp"
+        android:layout_height="26dp"
+        android:layout_margin="2dp"
+        android:layout_gravity="center"/>
 
     <TextView
         android:id="@+id/lblTestTitle"
         android:layout_weight="6"
         android:layout_width="0dp"
-        android:layout_height="34dp"
-        android:layout_margin="8dp"
-        android:textSize="20sp"
+        android:layout_height="24dp"
+        android:layout_margin="2dp"
+        android:textSize="18sp"
         android:textStyle="bold"
-        android:layout_gravity="center"
-        android:gravity="center"/>
+        android:layout_gravity="start|center"
+        android:gravity="start|center"/>
 
     <TextView
         android:id="@+id/lblTestMark"
         android:layout_weight="4"
         android:layout_width="0dp"
-        android:layout_height="34dp"
-        android:layout_margin="8dp"
-        android:textSize="20sp"
+        android:layout_height="24dp"
+        android:layout_margin="2dp"
+        android:textSize="18sp"
         android:textStyle="bold"
-        android:layout_gravity="center"
-        android:gravity="center"/>
+        android:layout_gravity="start|center"
+        android:gravity="start|center"/>
 
 </LinearLayout>
