--- a/app/src/main/res/layout/note_item.xml
+++ b/app/src/main/res/layout/note_item.xml
@@ -12,9 +12,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/item"
     android:orientation="horizontal"
-    android:background="@color/colorPrimary"
+    android:background="@drawable/listview_background"
     android:layout_width="match_parent"
-    android:layout_height="35dp"
+    android:layout_height="20dp"
     android:weightSum="10">
 
     <android.support.v7.widget.AppCompatImageView
@@ -27,18 +27,16 @@
         android:id="@+id/lblNoteTitle"
         android:layout_weight="7"
         android:layout_width="0dp"
-        android:layout_height="29dp"
-        android:layout_margin="8dp"
-        android:textSize="20sp"
+        android:layout_height="20dp"
         android:textStyle="bold"
-        android:layout_gravity="center"
-        android:gravity="center"/>
+        android:layout_gravity="start"
+        android:gravity="start|center"/>
 
     <TextView
         android:id="@+id/lblNoteMemoryDate"
         android:layout_weight="3"
         android:layout_width="0dp"
-        android:layout_height="29dp"
+        android:layout_height="20dp"
         android:layout_margin="8dp"
         android:textSize="12sp"
         android:layout_gravity="center"
