--- a/app/src/main/res/layout/timetable_item.xml
+++ b/app/src/main/res/layout/timetable_item.xml
@@ -8,54 +8,56 @@
   ~ of the License, or (at your option) any later version.
   -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/listview_background"
     android:orientation="horizontal"
-    android:background="@color/colorPrimary"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
+    android:layout_height="60dp"
     android:weightSum="10">
 
     <android.support.v7.widget.AppCompatImageView
         app:srcCompat="@drawable/ic_access_time_black_24dp"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_margin="5dp"/>
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_margin="1dp"
+        android:layout_gravity="center"/>
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_margin="2dp">
 
         <LinearLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:background="@drawable/listview_background"
             android:orientation="horizontal"
-            android:background="@color/colorPrimary"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
+            android:layout_height="17dp"
             android:weightSum="10">
 
             <TextView
                 android:id="@+id/lblTimeTableTitle"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_margin="2dp"
-                android:textSize="16sp"
+                android:layout_margin="1dp"
+                android:textSize="12sp"
                 android:gravity="center|start"
                 android:textStyle="bold"/>
 
         </LinearLayout>
 
         <LinearLayout
+            android:background="@color/Gray"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/colorPrimaryDark"/>
+            android:layout_height="1dp"/>
 
         <LinearLayout
+            android:background="@drawable/listview_background"
             android:orientation="horizontal"
-            android:background="@color/colorPrimary"
             android:layout_width="match_parent"
-            android:layout_height="25dp"
+            android:layout_height="16dp"
             android:weightSum="10">
 
             <TextView
@@ -63,24 +65,24 @@
                 android:layout_weight="3"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_margin="2dp"
-                android:textSize="16sp" />
+                android:layout_margin="1dp"
+                android:textSize="12sp"
+                android:textStyle="bold"/>
 
             <TextView
                 android:id="@+id/lblTimeTableYear"
                 android:layout_weight="7"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_margin="2dp"
-                android:textSize="16sp"/>
+                android:layout_margin="1dp"
+                android:textSize="12sp"/>
         </LinearLayout>
 
         <LinearLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:background="@drawable/listview_background"
             android:orientation="horizontal"
-            android:background="@color/colorPrimary"
             android:layout_width="match_parent"
-            android:layout_height="25dp"
+            android:layout_height="16dp"
             android:weightSum="10">
 
             <TextView
@@ -88,16 +90,17 @@
                 android:layout_weight="3"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_margin="2dp"
-                android:textSize="16sp" />
+                android:layout_margin="1dp"
+                android:textSize="12sp"
+                android:textStyle="bold"/>
 
             <TextView
                 android:id="@+id/lblTimeTableClass"
                 android:layout_weight="7"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_margin="2dp"
-                android:textSize="16sp"/>
+                android:layout_margin="1dp"
+                android:textSize="12sp"/>
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
