--- a/app/src/main/res/layout/todo_item.xml
+++ b/app/src/main/res/layout/todo_item.xml
@@ -8,37 +8,39 @@
   ~ of the License, or (at your option) any later version.
   -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/listview_background"
     android:id="@+id/item"
     android:orientation="horizontal"
-    android:background="@color/colorPrimary"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
+    android:layout_height="20dp"
     android:weightSum="10">
 
     <android.support.v7.widget.AppCompatImageView
         app:srcCompat="@drawable/ic_done_all_black_24dp"
-        android:layout_width="46dp"
-        android:layout_height="46dp"
-        android:layout_margin="2dp"/>
+        android:layout_weight="1"
+        android:layout_width="0dp"
+        android:layout_height="20dp"
+        android:scaleType="fitCenter"
+        android:padding="4dp"/>
 
     <TextView
         android:id="@+id/lblToDoTitle"
         android:layout_weight="8"
         android:layout_width="0dp"
-        android:layout_height="34dp"
-        android:layout_margin="8dp"
-        android:textSize="20sp"
+        android:layout_height="20dp"
         android:textStyle="bold"
-        android:layout_gravity="center"
-        android:gravity="center"/>
+        android:layout_gravity="start"
+        android:gravity="start|center"/>
 
-    <ImageView
+    <android.support.v7.widget.AppCompatImageView
         android:id="@+id/ivCheck"
-        android:visibility="gone"
+        app:srcCompat="@drawable/ic_check_circle_black_24dp"
         android:layout_weight="1"
         android:layout_width="0dp"
-        android:layout_height="40dp"
-        app:srcCompat="@drawable/ic_check_circle_black_24dp"/>
+        android:layout_height="20dp"
+        android:scaleType="fitCenter"
+        android:padding="4dp"/>
 </LinearLayout>
