--- a/app/src/main/res/layout/api_content.xml
+++ b/app/src/main/res/layout/api_content.xml
@@ -22,8 +22,7 @@
         android:id="@+id/scrollPanel"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:background="@drawable/bg_water"
-        android:layout_above="@+id/lvTeachers">
+        android:background="@drawable/bg_water">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
