--- a/app/src/main/res/layout/timetable_activity.xml
+++ b/app/src/main/res/layout/timetable_activity.xml
@@ -28,7 +28,9 @@
             android:id="@+id/lvTimeTable"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="3dp"/>
+            android:layout_margin="3dp"
+            android:divider="@color/Gray"
+            android:dividerHeight="2dp"/>
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/cmdTimeTableAdd"
