--- a/src/main/res/layout/timetable_entry_activity.xml
+++ b/src/main/res/layout/timetable_entry_activity.xml
@@ -217,6 +217,36 @@
                     <TextView android:layout_weight="1" android:layout_height="match_parent" android:background="@drawable/tbl_border" android:gravity="center"/>
                     <TextView android:layout_weight="1" android:layout_height="match_parent" android:background="@drawable/tbl_border" android:gravity="center"/>
                 </TableRow>
+                <TableRow android:weightSum="8">
+                    <TextView android:layout_weight="1" android:background="@drawable/tbl_border" android:gravity="center|start" android:textStyle="bold" android:paddingLeft="4dp" android:paddingStart="4dp" android:paddingRight="4dp" android:paddingEnd="4dp"/>
+                    <TextView android:layout_weight="1" android:layout_height="match_parent" android:background="@drawable/tbl_border" android:gravity="center"/>
+                    <TextView android:layout_weight="1" android:layout_height="match_parent" android:background="@drawable/tbl_border" android:gravity="center"/>
+                    <TextView android:layout_weight="1" android:layout_height="match_parent" android:background="@drawable/tbl_border" android:gravity="center"/>
+                    <TextView android:layout_weight="1" android:layout_height="match_parent" android:background="@drawable/tbl_border" android:gravity="center"/>
+                    <TextView android:layout_weight="1" android:layout_height="match_parent" android:background="@drawable/tbl_border" android:gravity="center"/>
+                    <TextView android:layout_weight="1" android:layout_height="match_parent" android:background="@drawable/tbl_border" android:gravity="center"/>
+                    <TextView android:layout_weight="1" android:layout_height="match_parent" android:background="@drawable/tbl_border" android:gravity="center"/>
+                </TableRow>
+                <TableRow android:weightSum="8">
+                    <TextView android:layout_weight="1" android:background="@drawable/tbl_border" android:gravity="center|start" android:textStyle="bold" android:paddingLeft="4dp" android:paddingStart="4dp" android:paddingRight="4dp" android:paddingEnd="4dp"/>
+                    <TextView android:layout_weight="1" android:layout_height="match_parent" android:background="@drawable/tbl_border" android:gravity="center"/>
+                    <TextView android:layout_weight="1" android:layout_height="match_parent" android:background="@drawable/tbl_border" android:gravity="center"/>
+                    <TextView android:layout_weight="1" android:layout_height="match_parent" android:background="@drawable/tbl_border" android:gravity="center"/>
+                    <TextView android:layout_weight="1" android:layout_height="match_parent" android:background="@drawable/tbl_border" android:gravity="center"/>
+                    <TextView android:layout_weight="1" android:layout_height="match_parent" android:background="@drawable/tbl_border" android:gravity="center"/>
+                    <TextView android:layout_weight="1" android:layout_height="match_parent" android:background="@drawable/tbl_border" android:gravity="center"/>
+                    <TextView android:layout_weight="1" android:layout_height="match_parent" android:background="@drawable/tbl_border" android:gravity="center"/>
+                </TableRow>
+                <TableRow android:weightSum="8">
+                    <TextView android:layout_weight="1" android:background="@drawable/tbl_border" android:gravity="center|start" android:textStyle="bold" android:paddingLeft="4dp" android:paddingStart="4dp" android:paddingRight="4dp" android:paddingEnd="4dp"/>
+                    <TextView android:layout_weight="1" android:layout_height="match_parent" android:background="@drawable/tbl_border" android:gravity="center"/>
+                    <TextView android:layout_weight="1" android:layout_height="match_parent" android:background="@drawable/tbl_border" android:gravity="center"/>
+                    <TextView android:layout_weight="1" android:layout_height="match_parent" android:background="@drawable/tbl_border" android:gravity="center"/>
+                    <TextView android:layout_weight="1" android:layout_height="match_parent" android:background="@drawable/tbl_border" android:gravity="center"/>
+                    <TextView android:layout_weight="1" android:layout_height="match_parent" android:background="@drawable/tbl_border" android:gravity="center"/>
+                    <TextView android:layout_weight="1" android:layout_height="match_parent" android:background="@drawable/tbl_border" android:gravity="center"/>
+                    <TextView android:layout_weight="1" android:layout_height="match_parent" android:background="@drawable/tbl_border" android:gravity="center"/>
+                </TableRow>
             </TableLayout>
         </ScrollView>
 
