--- a/src/main/res/layout/note_widget.xml
+++ b/src/main/res/layout/note_widget.xml
@@ -24,11 +24,15 @@
         android:singleLine="true"
         android:ellipsize="marquee"
         android:padding="2dp"
+        android:textStyle="bold"
+        android:textAlignment="center"
         android:text="@string/main_top5Notes"/>
     <ListView
+        android:id="@+id/lvNotes"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/lblHeader"
-        android:id="@+id/lvNotes">
-    </ListView>
+        android:dividerHeight="1dp"
+        android:padding="1dp"
+        android:layout_margin="1dp" />
 </RelativeLayout>
