--- a/src/main/res/layout/timetable_dialog.xml
+++ b/src/main/res/layout/timetable_dialog.xml
@@ -45,6 +45,7 @@
     <TableRow android:weightSum="1">
         <EditText
             android:id="@+id/txtRoomNumber"
+            android:hint="@string/timetable_roomNumber"
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
