--- a/src/main/res/drawable/timetable_border.xml
+++ b/src/main/res/drawable/timetable_border.xml
@@ -11,6 +11,9 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <stroke android:width="1dp" android:color="@color/colorPrimaryDark" />
-    <solid android:color="@color/Gray"/>
+    <stroke android:width="0.1dp" android:color="@color/colorAccent" />
+    <gradient
+        android:centerColor="@color/colorPrimary"
+        android:endColor="@color/colorPrimary"
+        android:startColor="@color/colorPrimary"/>
 </shape>
