--- a/src/main/res/layout/note_widget.xml
+++ b/src/main/res/layout/note_widget.xml
@@ -7,11 +7,11 @@
   ~ of the License, or (at your option) any later version.
   -->
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/tbl_border"
-    android:padding="@dimen/widget_margin">
+    android:background="@drawable/timetable_border">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -21,9 +21,8 @@
         android:marqueeRepeatLimit ="marquee_forever"
         android:focusableInTouchMode="true"
         android:scrollHorizontally="true"
-        android:singleLine="true"
         android:ellipsize="marquee"
-        android:padding="2dp"
+        android:padding="0.5dp"
         android:textStyle="bold"
         android:textAlignment="center"
         android:text="@string/main_top5Notes"/>
@@ -32,7 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/lblHeader"
-        android:dividerHeight="1dp"
-        android:padding="1dp"
-        android:layout_margin="1dp" />
+        android:dividerHeight="0.2dp"
+        android:padding="0.5dp"
+        android:layout_margin="0.5dp" />
 </RelativeLayout>
