--- a/src/main/res/layout/timetable_widget.xml
+++ b/src/main/res/layout/timetable_widget.xml
@@ -8,22 +8,22 @@
   -->
 
 <RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:background="@drawable/timetable_border">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:height="30dp"
         android:id="@+id/lblHeader"
-        android:background="@drawable/timetable_border"
         android:scrollbars="horizontal"
         android:marqueeRepeatLimit ="marquee_forever"
         android:focusableInTouchMode="true"
         android:scrollHorizontally="true"
-        android:singleLine="true"
+        android:singleLine="false"
         android:ellipsize="marquee"
-        android:padding="2dp"/>
+        android:padding="1dp"/>
     <GridView
         android:id="@+id/grdTimeTable"
         android:layout_width="match_parent"
