--- a/src/main/res/layout/todo_widget.xml
+++ b/src/main/res/layout/todo_widget.xml
@@ -11,8 +11,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/tbl_border"
-    android:padding="@dimen/widget_margin">
+    android:background="@drawable/timetable_border">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -22,14 +21,18 @@
         android:marqueeRepeatLimit ="marquee_forever"
         android:focusableInTouchMode="true"
         android:scrollHorizontally="true"
-        android:singleLine="true"
         android:ellipsize="marquee"
-        android:padding="2dp"
+        android:padding="0.5dp"
+        android:textStyle="bold"
+        android:textAlignment="center"
         android:text="@string/main_importantToDos"/>
     <ListView
+        android:id="@+id/lvToDos"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/lblHeader"
-        android:id="@+id/lvToDos">
+        android:dividerHeight="0.2dp"
+        android:padding="0.5dp"
+        android:layout_margin="0.5dp">
     </ListView>
 </RelativeLayout>
