--- a/src/main/res/xml/note_widget_info.xml
+++ b/src/main/res/xml/note_widget_info.xml
@@ -10,10 +10,12 @@
 
 <appwidget-provider
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:initialLayout="@layout/note_widget"
-    android:minHeight="180dp"
-    android:minWidth="180dp"
+    android:minHeight="120dp"
+    android:minWidth="120dp"
+    android:minResizeHeight="60dp"
+    android:minResizeWidth="120dp"
+    android:updatePeriodMillis="86400000"
     android:previewImage="@mipmap/ic_launcher_round"
-    android:resizeMode="vertical"
-    android:updatePeriodMillis="86400000">
+    android:initialLayout="@layout/note_widget"
+    android:resizeMode="vertical|horizontal">
 </appwidget-provider>
