--- a/src/main/res/xml/todo_widget_info.xml
+++ b/src/main/res/xml/todo_widget_info.xml
@@ -17,5 +17,6 @@
     android:updatePeriodMillis="86400000"
     android:previewImage="@mipmap/ic_launcher_round"
     android:initialLayout="@layout/todo_widget"
-    android:resizeMode="vertical|horizontal">
+    android:resizeMode="vertical|horizontal"
+    android:configure="de.domjos.schooltools.widgets.ToDoWidgetConfigurationActivity">
 </appwidget-provider>
