--- a/src/main/res/layout/whats_new_content.xml
+++ b/src/main/res/layout/whats_new_content.xml
@@ -30,9 +30,9 @@
             android:layout_margin="@dimen/text_margin"/>
 
         <TextView
+            android:id="@+id/lblInfo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/whats_new_info"
             android:layout_margin="@dimen/text_margin"
             android:padding="@dimen/text_margin"
             android:textStyle="italic"
