--- a/src/main/res/layout/learning_card_group_activity.xml
+++ b/src/main/res/layout/learning_card_group_activity.xml
@@ -1,24 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".activities.LearningCardGroupActivity">
+        tools:context=".activities.LearningCardGroupActivity"
+        android:background="@drawable/bg_water">
 
+    <ListView
+        android:id="@+id/lvLearningCardGroups"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
-    <android.support.design.widget.BottomNavigationView
-            android:id="@+id/navigation"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="0dp"
-            android:layout_marginStart="0dp"
-            android:background="?android:attr/windowBackground"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:menu="@menu/navigation_learning_card_group"/>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/cmdLearningCardGroupAdd"
+        android:src="@android:drawable/ic_menu_add"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:layout_margin="8dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"/>
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
