--- a/src/main/res/layout/learning_card_overview_activity.xml
+++ b/src/main/res/layout/learning_card_overview_activity.xml
@@ -9,6 +9,14 @@
         tools:context=".activities.LearningCardOverviewActivity"
         android:background="@drawable/bg_water">
 
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pager"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent">
+        <android.support.v4.view.PagerTabStrip
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </android.support.v4.view.ViewPager>
 
     <android.support.design.widget.BottomNavigationView
             android:id="@+id/navigation"
