--- a/src/main/res/layout/learning_card_fragment.xml
+++ b/src/main/res/layout/learning_card_fragment.xml
@@ -9,11 +9,11 @@
   -->
 
 <RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/tbl_border"
-    android:padding="4dp">
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:background="@drawable/tbl_border"
+        android:padding="4dp">
 
     <LinearLayout
         android:layout_width="match_parent"
