--- a/src/main/res/layout/learning_card_overview_activity.xml
+++ b/src/main/res/layout/learning_card_overview_activity.xml
@@ -18,10 +18,21 @@
         tools:context=".activities.LearningCardOverviewActivity"
         android:background="@drawable/bg_water">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
+        android:layout_below="@+id/toolbar"
         android:layout_above="@+id/cmdLearningCardQueryStart">
         <android.support.v4.view.PagerTabStrip
             android:layout_width="match_parent"
