--- a/src/main/res/menu/navigation_todo.xml
+++ b/src/main/res/menu/navigation_todo.xml
@@ -13,6 +13,6 @@
     <item
         android:id="@+id/navToDoList"
         android:icon="@drawable/ic_done_all_black_24dp"
-        android:title="@string/main_nav_todo" />
+        android:title="@string/todo_list" />
 
 </menu>
