--- a/src/main/res/layout/todo_entry_activity.xml
+++ b/src/main/res/layout/todo_entry_activity.xml
@@ -87,10 +87,11 @@
                     android:textSize="14sp"/>
                 <RatingBar
                     android:id="@+id/rbToDoImportance"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:layout_weight="6"
-                    android:numStars="5"/>
+                    android:numStars="5"
+                    android:layout_gravity="center|center"/>
             </LinearLayout>
 
             <CheckBox
