--- a/src/main/res/layout/timetable_subject_activity.xml
+++ b/src/main/res/layout/timetable_subject_activity.xml
@@ -77,9 +77,20 @@
                     <CheckBox
                         android:id="@+id/chkSubjectMainSubject"
                         android:text="@string/timetable_subject_mainSubject"
-                        android:layout_weight="8"
+                        android:layout_weight="20"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"/>
+                </LinearLayout>
+                <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:weightSum="20">
+                    <TextView
+                        android:text="@string/timetable_teacher"
+                        android:layout_weight="8"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="2dp"/>
                     <Spinner
                         android:id="@+id/spSubjectTeachers"
                         android:layout_weight="12"
